# fasm

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  fasm.py  fasm.tx  fasm_examples.fasm  fasm_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  update_version.py
.github/: check_license.sh  check_python_scripts.sh
.github/actions/checkout/: action.yaml
.github/actions/download-and-run-tests/: action.yaml  fasm-version.py  get-tests.sh
.github/actions/system-setup/: action.yaml
.github/actions/upload-to-pypi/: action.yaml
.github/workflows/: check-functionality.yml  check-install.yml  check-style.yml  licensing.yml  manylinux-install-cmake.sh  presubmit.yml  publish-to-pypi.yml  test.yml  wheel.yml
.github/workflows-src/: Makefile  check-functionality.yml  check-install.yml  check-style.yml  publish-to-pypi.yml
.github/workflows/checkout/: action.yaml
.github/workflows/system-setup/: action.yaml
docs/: Makefile  conf.py  environment.yml  index.rst  requirements.txt  specification.rst
docs/specification/: introduction.rst  line.rst  syntax.rst
examples/: comment.fasm  feature_only.fasm
fasm/: __init__.py  fasm.tx  model.py  output.py  tool.py  version.py
fasm/parser/: __init__.py  antlr.py  antlr_to_tuple.pyx  textx.py
src/: CMakeLists.txt  ParseFasm.cpp  ParseFasmRun.cpp  ParseFasmTests.cpp
src/antlr/: FasmLexer.g4  FasmParser.g4
tests/: __init__.py  test_simple.py
